<resources>
    <string name="app_name">AndroidScoreTracker</string>
    <string name="game_name_hint">Game name</string>
    <string name="game_session_name_hint">Session name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_game">Add Game</string>
    <string name="add_game_session">Add Game Session</string>
    <string name="has_draw">Has draw</string>
    <string name="game_spinner_label">Choose a game</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date_label">End date</string>
    <string name="label_win_button">Wins :</string>
    <string name="label_draw_button">Draws :</string>
    <string name="label_loose_button">Looses :</string>
    <string name="close_session">Close session</string>
    <string name="current_session">Current Sessions</string>
    <string name="title_comment_dialog">Add a comment</string>
    <string name="cancel">Cancel</string>
    <string name="win_rate">Win ratio:</string>
    <string name="last_five">Wins in last 5:</string>
    <string name="session_list">"Session List"</string>
    <string name="add_new_game">Add New Game</string>
    <string name="add_new_session">Add New Session</string>
    <string name="history_title">History</string>
</resources>
