<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/session_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/game_session_name_hint"
            android:nextFocusDown="@+id/game_selector"
            android:textColor="#fff"
            android:backgroundTint="#fff"
            android:singleLine="true" />

        <TextView
            android:id="@+id/game_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_spinner_label"
            android:layout_below="@+id/session_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp" />

        <Spinner
            android:id="@+id/game_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/game_spinner_label"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <CheckBox
            android:id="@+id/has_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_draw"
            android:layout_below="@+id/game_spinner"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_label"
            android:layout_below="@+id/has_draw"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/start_date"
            android:ems="10"
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_date_label"
            android:textColor="#fff"
            android:backgroundTint="#fff"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_label"
            android:layout_below="@+id/start_date"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/end_date"
            android:ems="10"
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/end_date_label"
            android:textColor="#fff"
            android:backgroundTint="#fff"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_below="@+id/end_date"
            android:layout_centerHorizontal="true" />



    </RelativeLayout>
</ScrollView>