<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/scoreboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.56">

        <TextView
            android:id="@+id/scoreboard_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loose_score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/scoreboard_session_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/label_session_date_end"
            android:layout_alignEnd="@+id/loose_score_button" />

        <TextView
            android:id="@+id/label_session_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_label"
            android:layout_below="@+id/loose_score_button"
            android:layout_alignParentStart="true"
            android:layout_marginTop="39dp" />
        <TextView
            android:id="@+id/session_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/label_session_date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_label"
            android:layout_alignTop="@+id/label_session_date_start"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/session_date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_win_button"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/label_session_date_start" />
        <Button
            android:id="@+id/win_score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/label_session_date_end" />

        <TextView
            android:id="@+id/title_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_draw_button"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/win_score_button"
            android:layout_alignEnd="@+id/title_win" />
        <Button
            android:id="@+id/close_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/title_draw"
            android:layout_alignStart="@+id/win_score_button"
            android:text="@string/close_session" />

        <TextView
            android:id="@+id/title_loose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_loose_button"
            android:layout_below="@+id/close_session"
            android:layout_alignStart="@+id/title_draw"
            android:layout_marginTop="39dp" />
        <Button
            android:id="@+id/draw_score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_loose"
            android:layout_alignStart="@+id/close_session" />

    </RelativeLayout>

</LinearLayout>